Performance Improvement: Paginate ideas and remove some N + 1 queries
